--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "fcm-node": "^1.6.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.1.3",
-    "mongoose": "^6.0.10"
+    "mongoose": "^6.0.10",
+    "node-cron": "^3.0.0"
   }
 }
